--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,7 +35,7 @@
    
 
     <!-- Hero -->
-    <section class="hero" id="home">
+    <section class="hero wavy-bottom" id="home">
       <div class="video_container">
         <video
           autoplay
@@ -54,7 +54,7 @@
 
     <!----------------------------------------------------- Home Page Sections -------------------------------------------->
     <!-- Specialty Cakes -->
-    <section id="specialty-cakes" class="">
+    <section id="specialty-cakes" class="menu">
       <div class="specialty">
         <!-- row 1 -->
           <!-- card1 -->
@@ -68,104 +68,113 @@
               </div>
             </div>
             <div class="row">
-              <div class="box-item col-md-12 col-lg-4">
-                <div class="flip-box mx-auto">
-                  <!-- front of box -->
-                  <div
-                    class="flip-box-front text-center"
-                    style="background-image: url('/images/cake-2.jpg')"
-                  >
-                    <div class="inner color-white">
-                      <div class="front-header">
-                        <h3 class="flip-box-header">German <br> Chocolate Cake</h3>
-                      </div>
-                      <i class="bx bx-right-arrow-circle"></i>
-                    </div>
-                  </div>
-                  <!-- Back of box -->
-                  <div
-                    class="flip-box-back text-center"
-                    style="background-color: lightblue"
-                  >
-                    <div class="inner color-white">
-                      <h4 class="flip-box-header">German Chocolate Cake!</h4>
-                      <p>
-                        Lectus magna fringilla urna porttitor. Elit sed vulputate mi
-                        sit amet mauris commodo quis. Proin sed libero enim sed
-                        faucibus turpis in eu.
-                      </p>
-                      <button class="flip-box-button">Order</button>
-                    </div>
-                  </div>
-                </div>
+              <!-- card1 -->
+        <div class="box-item col-sm-6 col-md-6 col-lg-4">
+          <div class="flip-box mx-auto">
+            <!-- front of box -->
+            <div
+              class="flip-box-front text-center"
+              style="background-image: url('/images/cake-2.jpg')"
+            >
+              <div class="inner color-white">
+                <!-- <div class="front-header">
+                  <h3 class="flip-box-header">German <br> Chocolate Cake</h3>
+                </div> -->
+                <!-- <i class="bx bx-right-arrow-circle"></i> -->
               </div>
-              <!-- card2 -->
-              <div class="box-item col-md-12 col-lg-4">
-                <div class="flip-box mx-auto">
-                  <div
-                    class="flip-box-front text-center"
-                    style="background-image: url('/images/cake-3.jpg')"
-                  >
-                    <div class="inner color-white">
-                      <div class="front-header">
-                        <h3 class="flip-box-header">Strawberry <br> Shortcake</h3>
-                      </div>
-                      <i class="bx bx-right-arrow-circle"></i>
-                    </div>
-                  </div>
-                  <div
-                    class="flip-box-back text-center"
-                    style="background-color: lightblue"
-                  >
-                    <div class="inner color-white">
-                      <h3 class="flip-box-header">Strawberry Shortcake!</h3>
-                      <p>
-                        Lectus magna fringilla urna porttitor. Elit sed vulputate mi
-                        sit amet mauris commodo quis. Proin sed libero enim sed
-                        faucibus turpis in eu.
-                      </p>
-                      <button class="flip-box-button">Order</button>
-                    </div>
-                  </div>
-                </div>
+            </div>
+            <!-- Back of box -->
+            <div
+              class="flip-box-back text-center"
+              style="background-color: lightblue"
+            >
+              <div class="inner color-white">
+                <p>
+                  Lectus magna fringilla urna porttitor. Elit sed vulputate mi
+                  sit amet mauris commodo quis. Proin sed libero enim sed
+                  faucibus turpis in eu.
+                </p>
+                <a href="/product-order" class="flip-box-button" >Order</a>
+                <button class="flip-box-button" type="button" >Order</button>
               </div>
-              <!-- card3 -->
-              <div class="box-item col-md-12 col-lg-4">
-                <div class="flip-box mx-auto">
-                  <div
-                    class="flip-box-front text-center"
-                    style="background-image: url('/images/carrot-cake.jpg')"
-                  >
-                    <div class="inner color-white">
-                      <div class="front-header">
-                        <h3 class="flip-box-header">Carrot Cake</h3>
-                      </div>
-                      <i class="bx bx-right-arrow-circle"></i>
-                    </div>
-                  </div>
-                  <div
-                    class="flip-box-back text-center"
-                    style="background-color: lightblue"
-                  >
-                    <div class="inner color-white">
-                      <h3 class="flip-box-header">Carrot Cake!</h3>
-                      <p>
-                        Lectus magna fringilla urna porttitor. Elit sed vulputate mi
-                        sit amet mauris commodo quis. Proin sed libero enim sed
-                        faucibus turpis in eu.
-                      </p>
-                      <button class="flip-box-button">Order</button>
-                    </div>
-                  </div>
+            </div>
+          </div>
+          <div class="menu-card-bottom">
+            <h3>German Chocolate Cake</h3>
+            <h5>$30.00</h5>
+          </div>
+
+        </div>
+        <!-- card2 -->
+        <div class="box-item col-sm-6 col-md-6 col-lg-4">
+          <div class="flip-box mx-auto">
+            <div
+              class="flip-box-front text-center"
+              style="background-image: url('/images/cake-3.jpg')"
+            >
+              <div class="inner color-white">
+                <!-- <div class="front-header">
+                  <h3 class="flip-box-header">Strawberry <br> Shortcake</h3>
                 </div>
+                <i class="bx bx-right-arrow-circle"></i> -->
               </div>
+            </div>
+            <div
+              class="flip-box-back text-center"
+              style="background-color: lightblue"
+            >
+              <div class="inner color-white">
+                <p>
+                  Lectus magna fringilla urna porttitor. Elit sed vulputate mi
+                  sit amet mauris commodo quis. Proin sed libero enim sed
+                  faucibus turpis in eu.
+                </p>
+                <button class="flip-box-button">Order</button>
+              </div>
+            </div>
+          </div>
+          <div class="menu-card-bottom">
+            <h3>Strawberry Shortcake</h3>
+            <h5>$30.00</h5>
+          </div>
+        </div>
+        <!-- card3 -->
+        <div class="box-item col-sm-6 col-md-6 col-lg-4">
+          <div class="flip-box mx-auto">
+            <div
+              class="flip-box-front text-center"
+              style="background-image: url('/images/carrot-cake.jpg')"
+            >
+              <div class="inner color-white">
+
+              </div>
+            </div>
+            <div
+              class="flip-box-back text-center"
+              style="background-color: lightblue"
+            >
+              <div class="inner color-white">
+                <p>
+                  Lectus magna fringilla urna porttitor. Elit sed vulputate mi
+                  sit amet mauris commodo quis. Proin sed libero enim sed
+                  faucibus turpis in eu.
+                </p>
+                <button class="flip-box-button">Order</button>
+              </div>
+            </div>
+          </div>
+          <div class="menu-card-bottom">
+            <h3>Carrot Cake</h3>
+            <h5>$30.00</h5>
+          </div>
+        </div>
             </div>
       </div>
     </div>
     </section>
 
 <!-- Ad section -->
-    <section>
+    <section class="deep-wave">
       <div class="page-container container ad-order">
           <div class="row mx-auto">
               <div class="col-md-6 ad-image my-auto">
@@ -175,7 +184,7 @@
                   <h1>Find Your Perfect Cake!</h1>
                   <div class="row">
                       <div class="col-md-12 ad-details">
-                        <p> Our menu offers lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p> Our menu offers many lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                           <button class="col-md-12 button-74" type="submit">Make Order Now</button>
                       </div>
                   </div>
@@ -186,7 +195,7 @@
   
   
     <!-- My Creations -->
-    <section id="my-creations">
+    <section id="my-creations" class="wavy">
       <div class="section creations">
         <div class="container">
           <div class="row">
@@ -240,7 +249,7 @@
 
 
 <!-- Ad section -->
-<section>
+<section class="wavy">
   <div class="ad-container container ad-order">
       <div class="row mx-auto">
           <div class="col ad-header my-auto">
@@ -258,7 +267,6 @@
       </div>
   </div>
 </section>
-    
 
 
 
