--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -8,13 +8,14 @@
       <div class="menu-header">
         <h1 class="">Menu</h1>
       </div>
+
     <!-- Menu Cards -->
-    <!-- row 1 -->
-    <!-- card1 -->
     <div class="container menu-cards">
       <h3 class="menu-title">Cakes</h3>
+
       <div class="row">
-        <div class="box-item col-md-12 col-lg-4">
+        <!-- card1 -->
+        <div class="box-item col-sm-6 col-md-6 col-lg-4">
           <div class="flip-box mx-auto">
             <!-- front of box -->
             <div
@@ -22,10 +23,10 @@
               style="background-image: url('/images/cake-2.jpg')"
             >
               <div class="inner color-white">
-                <div class="front-header">
+                <!-- <div class="front-header">
                   <h3 class="flip-box-header">German <br> Chocolate Cake</h3>
-                </div>
-                <i class="bx bx-right-arrow-circle"></i>
+                </div> -->
+                <!-- <i class="bx bx-right-arrow-circle"></i> -->
               </div>
             </div>
             <!-- Back of box -->
@@ -34,7 +35,6 @@
               style="background-color: lightblue"
             >
               <div class="inner color-white">
-                <h4 class="flip-box-header">German Chocolate Cake!</h4>
                 <p>
                   Lectus magna fringilla urna porttitor. Elit sed vulputate mi
                   sit amet mauris commodo quis. Proin sed libero enim sed
@@ -45,19 +45,24 @@
               </div>
             </div>
           </div>
+          <div class="menu-card-bottom">
+            <h3>German Chocolate Cake</h3>
+            <h5>$30.00</h5>
+          </div>
+
         </div>
         <!-- card2 -->
-        <div class="box-item col-md-12 col-lg-4">
+        <div class="box-item col-sm-6 col-md-6 col-lg-4">
           <div class="flip-box mx-auto">
             <div
               class="flip-box-front text-center"
               style="background-image: url('/images/cake-3.jpg')"
             >
               <div class="inner color-white">
-                <div class="front-header">
+                <!-- <div class="front-header">
                   <h3 class="flip-box-header">Strawberry <br> Shortcake</h3>
                 </div>
-                <i class="bx bx-right-arrow-circle"></i>
+                <i class="bx bx-right-arrow-circle"></i> -->
               </div>
             </div>
             <div
@@ -65,7 +70,6 @@
               style="background-color: lightblue"
             >
               <div class="inner color-white">
-                <h3 class="flip-box-header">Strawberry Shortcake!</h3>
                 <p>
                   Lectus magna fringilla urna porttitor. Elit sed vulputate mi
                   sit amet mauris commodo quis. Proin sed libero enim sed
@@ -75,19 +79,20 @@
               </div>
             </div>
           </div>
+          <div class="menu-card-bottom">
+            <h3>Strawberry Shortcake</h3>
+            <h5>$30.00</h5>
+          </div>
         </div>
         <!-- card3 -->
-        <div class="box-item col-md-12 col-lg-4">
+        <div class="box-item col-sm-6 col-md-6 col-lg-4">
           <div class="flip-box mx-auto">
             <div
               class="flip-box-front text-center"
               style="background-image: url('/images/carrot-cake.jpg')"
             >
               <div class="inner color-white">
-                <div class="front-header">
-                  <h3 class="flip-box-header">Carrot Cake</h3>
-                </div>
-                <i class="bx bx-right-arrow-circle"></i>
+
               </div>
             </div>
             <div
@@ -95,7 +100,6 @@
               style="background-color: lightblue"
             >
               <div class="inner color-white">
-                <h3 class="flip-box-header">Carrot Cake!</h3>
                 <p>
                   Lectus magna fringilla urna porttitor. Elit sed vulputate mi
                   sit amet mauris commodo quis. Proin sed libero enim sed
@@ -105,35 +109,67 @@
               </div>
             </div>
           </div>
+          <div class="menu-card-bottom">
+            <h3>Carrot Cake</h3>
+            <h5>$30.00</h5>
+          </div>
         </div>
-      </div>
-    </div>
-    
-    <!-- row 2 -->
-    <!-- card1 -->
-    <div class="container menu-cards">
-      <div class="row">
-        <div class="box-item col-md-12 col-lg-4">
+        <!-- card1 -->
+        <div class="box-item col-sm-6 col-md-6 col-lg-4">
           <div class="flip-box mx-auto">
             <!-- front of box -->
+            <div
+              class="flip-box-front text-center"
+              style="background-image: url('/images/cake-2.jpg')"
+            >
+              <div class="inner color-white">
+                <!-- <div class="front-header">
+                  <h3 class="flip-box-header">German <br> Chocolate Cake</h3>
+                </div> -->
+                <!-- <i class="bx bx-right-arrow-circle"></i> -->
+              </div>
+            </div>
+            <!-- Back of box -->
+            <div
+              class="flip-box-back text-center"
+              style="background-color: lightblue"
+            >
+              <div class="inner color-white">
+                <p>
+                  Lectus magna fringilla urna porttitor. Elit sed vulputate mi
+                  sit amet mauris commodo quis. Proin sed libero enim sed
+                  faucibus turpis in eu.
+                </p>
+                <a href="/product-order" class="flip-box-button" >Order</a>
+                <button class="flip-box-button" type="button" >Order</button>
+              </div>
+            </div>
+          </div>
+          <div class="menu-card-bottom">
+            <h3>German Chocolate Cake</h3>
+            <h5>$30.00</h5>
+          </div>
+
+        </div>
+        <!-- card2 -->
+        <div class="box-item col-sm-6 col-md-6 col-lg-4">
+          <div class="flip-box mx-auto">
             <div
               class="flip-box-front text-center"
               style="background-image: url('/images/cake-3.jpg')"
             >
               <div class="inner color-white">
-                <div class="front-header">
-                  <h3 class="flip-box-header">German <br> Chocolate Cake</h3>
+                <!-- <div class="front-header">
+                  <h3 class="flip-box-header">Strawberry <br> Shortcake</h3>
                 </div>
-                <i class="bx bx-right-arrow-circle"></i>
+                <i class="bx bx-right-arrow-circle"></i> -->
               </div>
             </div>
-            <!-- Back of box -->
             <div
               class="flip-box-back text-center"
               style="background-color: lightblue"
             >
               <div class="inner color-white">
-                <h4 class="flip-box-header">German Chocolate Cake!</h4>
                 <p>
                   Lectus magna fringilla urna porttitor. Elit sed vulputate mi
                   sit amet mauris commodo quis. Proin sed libero enim sed
@@ -143,49 +179,20 @@
               </div>
             </div>
           </div>
-        </div>
-        <!-- card2 -->
-        <div class="box-item col-md-12 col-lg-4">
-          <div class="flip-box mx-auto">
-            <div
-              class="flip-box-front text-center"
-              style="background-image: url('/images/cake-slice.jpg')"
-            >
-              <div class="inner color-white">
-                <div class="front-header">
-                  <h3 class="flip-box-header">Strawberry <br> Shortcake</h3>
-                </div>
-                <i class="bx bx-right-arrow-circle"></i>
-              </div>
-            </div>
-            <div
-              class="flip-box-back text-center"
-              style="background-color: lightblue"
-            >
-              <div class="inner color-white">
-                <h3 class="flip-box-header">Strawberry Shortcake!</h3>
-                <p>
-                  Lectus magna fringilla urna porttitor. Elit sed vulputate mi
-                  sit amet mauris commodo quis. Proin sed libero enim sed
-                  faucibus turpis in eu.
-                </p>
-                <button class="flip-box-button">Order</button>
-              </div>
-            </div>
+          <div class="menu-card-bottom">
+            <h3>Strawberry Shortcake</h3>
+            <h5>$30.00</h5>
           </div>
         </div>
         <!-- card3 -->
-        <div class="box-item col-md-12 col-lg-4">
+        <div class="box-item col-sm-6 col-md-6 col-lg-4">
           <div class="flip-box mx-auto">
             <div
               class="flip-box-front text-center"
-              style="background-image: url('/images/cake.jpg')"
+              style="background-image: url('/images/carrot-cake.jpg')"
             >
               <div class="inner color-white">
-                <div class="front-header">
-                  <h3 class="flip-box-header">Carrot Cake</h3>
-                </div>
-                <i class="bx bx-right-arrow-circle"></i>
+
               </div>
             </div>
             <div
@@ -193,7 +200,6 @@
               style="background-color: lightblue"
             >
               <div class="inner color-white">
-                <h3 class="flip-box-header">Carrot Cake!</h3>
                 <p>
                   Lectus magna fringilla urna porttitor. Elit sed vulputate mi
                   sit amet mauris commodo quis. Proin sed libero enim sed
@@ -203,26 +209,24 @@
               </div>
             </div>
           </div>
+          <div class="menu-card-bottom">
+            <h3>Carrot Cake</h3>
+            <h5>$30.00</h5>
+          </div>
         </div>
-      </div>
-    </div>
-
-    <!-- row 3 -->
-    <!-- card1 -->
-    <div class="container menu-cards">
-      <div class="row">
-        <div class="box-item col-md-12 col-lg-4">
+        <!-- card1 -->
+        <div class="box-item col-sm-6 col-md-6 col-lg-4">
           <div class="flip-box mx-auto">
             <!-- front of box -->
             <div
               class="flip-box-front text-center"
-              style="background-image: url('/images/cake-5.jpg')"
+              style="background-image: url('/images/cake-2.jpg')"
             >
               <div class="inner color-white">
-                <div class="front-header">
-                  <h3 class="flip-box-header"> Chocolate<br> Truffle Cake</h3>
-                </div>
-                <i class="bx bx-right-arrow-circle"></i>
+                <!-- <div class="front-header">
+                  <h3 class="flip-box-header">German <br> Chocolate Cake</h3>
+                </div> -->
+                <!-- <i class="bx bx-right-arrow-circle"></i> -->
               </div>
             </div>
             <!-- Back of box -->
@@ -231,7 +235,41 @@
               style="background-color: lightblue"
             >
               <div class="inner color-white">
-                <h4 class="flip-box-header">German Chocolate Cake!</h4>
+                <p>
+                  Lectus magna fringilla urna porttitor. Elit sed vulputate mi
+                  sit amet mauris commodo quis. Proin sed libero enim sed
+                  faucibus turpis in eu.
+                </p>
+                <a href="/product-order" class="flip-box-button" >Order</a>
+                <button class="flip-box-button" type="button" >Order</button>
+              </div>
+            </div>
+          </div>
+          <div class="menu-card-bottom">
+            <h3>German Chocolate Cake</h3>
+            <h5>$30.00</h5>
+          </div>
+
+        </div>
+        <!-- card2 -->
+        <div class="box-item col-sm-6 col-md-6 col-lg-4">
+          <div class="flip-box mx-auto">
+            <div
+              class="flip-box-front text-center"
+              style="background-image: url('/images/cake-3.jpg')"
+            >
+              <div class="inner color-white">
+                <!-- <div class="front-header">
+                  <h3 class="flip-box-header">Strawberry <br> Shortcake</h3>
+                </div>
+                <i class="bx bx-right-arrow-circle"></i> -->
+              </div>
+            </div>
+            <div
+              class="flip-box-back text-center"
+              style="background-color: lightblue"
+            >
+              <div class="inner color-white">
                 <p>
                   Lectus magna fringilla urna porttitor. Elit sed vulputate mi
                   sit amet mauris commodo quis. Proin sed libero enim sed
@@ -241,49 +279,20 @@
               </div>
             </div>
           </div>
-        </div>
-        <!-- card2 -->
-        <div class="box-item col-md-12 col-lg-4">
-          <div class="flip-box mx-auto">
-            <div
-              class="flip-box-front text-center"
-              style="background-image: url('/images/cake-8.jpg')"
-            >
-              <div class="inner color-white">
-                <div class="front-header">
-                  <h3 class="flip-box-header">Lemon Cake</h3>
-                </div>
-                <i class="bx bx-right-arrow-circle"></i>
-              </div>
-            </div>
-            <div
-              class="flip-box-back text-center"
-              style="background-color: lightblue"
-            >
-              <div class="inner color-white">
-                <h3 class="flip-box-header">Strawberry Shortcake!</h3>
-                <p>
-                  Lectus magna fringilla urna porttitor. Elit sed vulputate mi
-                  sit amet mauris commodo quis. Proin sed libero enim sed
-                  faucibus turpis in eu.
-                </p>
-                <button class="flip-box-button">Order</button>
-              </div>
-            </div>
+          <div class="menu-card-bottom">
+            <h3>Strawberry Shortcake</h3>
+            <h5>$30.00</h5>
           </div>
         </div>
         <!-- card3 -->
-        <div class="box-item col-md-12 col-lg-4">
+        <div class="box-item col-sm-6 col-md-6 col-lg-4">
           <div class="flip-box mx-auto">
             <div
               class="flip-box-front text-center"
-              style="background-image: url('/images/cake-7.jpg')"
+              style="background-image: url('/images/carrot-cake.jpg')"
             >
               <div class="inner color-white">
-                <div class="front-header">
-                  <h3 class="flip-box-header">White Cake</h3>
-                </div>
-                <i class="bx bx-right-arrow-circle"></i>
+
               </div>
             </div>
             <div
@@ -291,7 +300,6 @@
               style="background-color: lightblue"
             >
               <div class="inner color-white">
-                <h3 class="flip-box-header">Carrot Cake!</h3>
                 <p>
                   Lectus magna fringilla urna porttitor. Elit sed vulputate mi
                   sit amet mauris commodo quis. Proin sed libero enim sed
@@ -301,9 +309,16 @@
               </div>
             </div>
           </div>
+          <div class="menu-card-bottom">
+            <h3>Carrot Cake</h3>
+            <h5>$30.00</h5>
+          </div>
         </div>
-      </div>
+
+
     </div>
+  </div>
+  </div>
   </section>
 
   
