--- a/views/product-order.ejs
+++ b/views/product-order.ejs
@@ -11,11 +11,12 @@
                 <div class="row">
                     <div class="col-md-12 product-details">
                         <h4>Product Details</h4>
+                        <h5>$30.00</h5>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
                         <p>Serves: XX</p>
                         <p>*cake size*</p>
                         <p>48 Hours Advanced Notice Required! If this item is needed sooner, please contact me!</p>
-                        <p>Allergy Advisory: EGGS, FISH, MILK, PEANUTS, SOYBEANS, TREE NUTS, WHEAT, SESAME. Even if not listed on labels, please be aware that our products may have come in contact with these ingredients.</p>
+                        <p>Allergy Advisory: EGGS, FISH, MILK, PEANUTS, SOYBEANS, TREE NUTS, WHEAT, SESAME. <br> Even if not listed on labels, please be aware that our products may have come in contact with these ingredients.</p>
                         <button class="col-md-12 button-74" type="submit">Add to Cart</button>
 
                     </div>
