--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,6 +4,7 @@
  * Copyright 2011-2023 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Borel&family=Dancing+Script:wght@400;700&family=Grandiflora+One&family=Macondo&family=Merienda:wght@400;600;800&family=Roboto:wght@300;400;700&family=Updock&display=swap");
 :root,
 [data-bs-theme=light] {
@@ -754,7 +755,7 @@ progress {
     max-width: 720px;
   }
 }
-@media (min-width: 910px) {
+@media (min-width: 850px) {
   .container-lg, .container-md, .container-sm, .container {
     max-width: 960px;
   }
@@ -773,7 +774,7 @@ progress {
   --bs-breakpoint-xs: 0;
   --bs-breakpoint-sm: 576px;
   --bs-breakpoint-md: 668px;
-  --bs-breakpoint-lg: 910px;
+  --bs-breakpoint-lg: 850px;
   --bs-breakpoint-xl: 1200px;
   --bs-breakpoint-xxl: 1400px;
 }
@@ -1342,7 +1343,7 @@ progress {
     --bs-gutter-y: 3rem;
   }
 }
-@media (min-width: 910px) {
+@media (min-width: 850px) {
   .col-lg {
     flex: 1 0 0%;
   }
@@ -2058,7 +2059,7 @@ progress {
     -webkit-overflow-scrolling: touch;
   }
 }
-@media (max-width: 909.98px) {
+@media (max-width: 849.98px) {
   .table-responsive-lg {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
@@ -3431,7 +3432,7 @@ textarea.form-control-lg {
     left: auto;
   }
 }
-@media (min-width: 910px) {
+@media (min-width: 850px) {
   .dropdown-menu-lg-start {
     --bs-position: start;
   }
@@ -4085,7 +4086,7 @@ textarea.form-control-lg {
     overflow-y: visible;
   }
 }
-@media (min-width: 910px) {
+@media (min-width: 850px) {
   .navbar-expand-lg {
     flex-wrap: nowrap;
     justify-content: flex-start;
@@ -5082,7 +5083,7 @@ textarea.form-control-lg {
     border-left-width: var(--bs-list-group-border-width);
   }
 }
-@media (min-width: 910px) {
+@media (min-width: 850px) {
   .list-group-horizontal-lg {
     flex-direction: row;
   }
@@ -5540,7 +5541,7 @@ textarea.form-control-lg {
     --bs-modal-width: 300px;
   }
 }
-@media (min-width: 910px) {
+@media (min-width: 850px) {
   .modal-lg,
   .modal-xl {
     --bs-modal-width: 800px;
@@ -5610,7 +5611,7 @@ textarea.form-control-lg {
     overflow-y: auto;
   }
 }
-@media (max-width: 909.98px) {
+@media (max-width: 849.98px) {
   .modal-fullscreen-lg-down {
     width: 100vw;
     max-width: none;
@@ -6376,7 +6377,7 @@ textarea.form-control-lg {
   }
 }
 
-@media (max-width: 909.98px) {
+@media (max-width: 849.98px) {
   .offcanvas-lg {
     position: fixed;
     bottom: 0;
@@ -6392,12 +6393,12 @@ textarea.form-control-lg {
     transition: var(--bs-offcanvas-transition);
   }
 }
-@media (max-width: 909.98px) and (prefers-reduced-motion: reduce) {
+@media (max-width: 849.98px) and (prefers-reduced-motion: reduce) {
   .offcanvas-lg {
     transition: none;
   }
 }
-@media (max-width: 909.98px) {
+@media (max-width: 849.98px) {
   .offcanvas-lg.offcanvas-start {
     top: 0;
     left: 0;
@@ -6436,7 +6437,7 @@ textarea.form-control-lg {
     visibility: visible;
   }
 }
-@media (min-width: 910px) {
+@media (min-width: 850px) {
   .offcanvas-lg {
     --bs-offcanvas-height: auto;
     --bs-offcanvas-border-width: 0;
@@ -6994,7 +6995,7 @@ textarea.form-control-lg {
     z-index: 1020;
   }
 }
-@media (min-width: 910px) {
+@media (min-width: 850px) {
   .sticky-lg-top {
     position: sticky;
     top: 0;
@@ -10157,7 +10158,7 @@ textarea.form-control-lg {
     text-align: center !important;
   }
 }
-@media (min-width: 910px) {
+@media (min-width: 850px) {
   .float-lg-start {
     float: left !important;
   }
@@ -11856,6 +11857,361 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+/* Wavy border generator link: https://css-generators.com/wavy-shapes/ */
+.wavy {
+  --mask: radial-gradient(19.8px at 50% 28px, #000 99%, #0000 101%)
+      calc(50% - 28px) 0/56px 51% repeat-x,
+    radial-gradient(19.8px at 50% -14px, #0000 99%, #000 101%) 50% 14px/56px
+      calc(51% - 14px) repeat-x,
+    radial-gradient(19.8px at 50% calc(100% - 28px), #000 99%, #0000 101%) 50%
+      100%/56px 51% repeat-x,
+    radial-gradient(19.8px at 50% calc(100% + 14px), #0000 99%, #000 101%)
+      calc(50% - 28px) calc(100% - 14px) / 56px calc(51% - 14px) repeat-x;
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
+}
+
+.wavy-bottom {
+  --mask: radial-gradient(19.8px at 50% calc(100% - 28px), #000 99%, #0000 101%)
+      calc(50% - 28px) 0/56px 100%,
+    radial-gradient(19.8px at 50% calc(100% + 14px), #0000 99%, #000 101%) 50%
+      calc(100% - 14px) / 56px 100% repeat-x;
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
+}
+
+.deep-wave {
+  --mask: radial-gradient(22.25px at 50% 28.35px, #000 99%, #0000 101%)
+      calc(50% - 42px) 0/84px 51% repeat-x,
+    radial-gradient(22.25px at 50% -7.35px, #0000 99%, #000 101%) 50% 21px/84px
+      calc(51% - 21px) repeat-x,
+    radial-gradient(22.25px at 50% calc(100% - 28.35px), #000 99%, #0000 101%)
+      50% 100%/84px 51% repeat-x,
+    radial-gradient(22.25px at 50% calc(100% + 7.35px), #0000 99%, #000 101%)
+      calc(50% - 42px) calc(100% - 21px) / 84px calc(51% - 21px) repeat-x;
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
+}
+
+#contact {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-align: left;
+  /* background-image: url("/images/sprinkles-bg.jpg"); */
+}
+
+.page-banner {
+  background-image: url("/images/mini-cakes.jpg");
+  background-size: cover;
+  padding: 150px 0 130px 0;
+  min-height: 400px;
+  min-width: 100vw;
+  position: relative;
+  display: flex;
+}
+
+.page-banner::before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(95, 202, 198, 0.9019607843);
+}
+
+.page-banner h1, .page-banner .h1 {
+  color: white;
+  font-size: 3.5rem;
+  line-height: 6rem;
+}
+
+.contact .container {
+  position: relative;
+  width: 100%;
+  min-height: 80vh;
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact .form {
+  width: 100%;
+  max-width: 820px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.contact-form {
+  background-color: var(--pink-color);
+  position: relative;
+}
+
+.contact-form:before {
+  content: "";
+  position: absolute;
+  width: 26px;
+  height: 26px;
+  background-color: var(--pink-color);
+  transform: rotate(45deg);
+  top: 50px;
+  left: -13px;
+}
+
+.contact form {
+  padding: 2.3rem 2.2rem;
+  z-index: 10;
+  overflow: hidden;
+  position: relative;
+}
+
+.info-title {
+  color: #fff;
+  font-weight: 500;
+  font-size: 1.8rem;
+  line-height: 1;
+  margin-bottom: 0.7rem;
+}
+
+.contact .input-container {
+  position: relative;
+  margin: 1rem 0;
+}
+
+.contact .input {
+  width: 100%;
+  outline: none;
+  border: 2px solid #fafafa;
+  background: none;
+  padding: 0.6rem 1.2rem;
+  color: #fff;
+  font-weight: 400;
+  font-size: 1rem;
+  letter-spacing: 0.7px;
+  border-radius: 25px;
+  transition: 0.3s;
+}
+
+.contact textarea.input {
+  padding: 0.8rem 1.2rem;
+  min-height: 150px;
+  border-radius: 22px;
+  resize: none;
+  overflow-y: auto;
+}
+
+.contact .input-container label {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+  padding: 0 0.4rem;
+  color: #fafafa;
+  font-size: 0.9rem;
+  font-weight: 400;
+  pointer-events: none;
+  z-index: 1000;
+  transition: 0.5s;
+}
+
+.contact .input-container.textarea label {
+  top: 1rem;
+  transform: translateY(0);
+}
+
+.contact .btn {
+  padding: 0.6rem 1.3rem;
+  background-color: #fff;
+  border: 2px solid #fafafa;
+  font-size: 0.95rem;
+  color: var(--pink-color);
+  line-height: 1;
+  border-radius: 25px;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
+  margin: 0;
+}
+
+.contact .btn:hover {
+  background-color: transparent;
+  color: #fff;
+}
+
+.contact .input-container span {
+  position: absolute;
+  top: 0;
+  left: 25px;
+  transform: translateY(-50%);
+  font-size: 0.8rem;
+  padding: 0 0.4rem;
+  color: transparent;
+  pointer-events: none;
+  z-index: 500;
+}
+
+.contact .input-container span:before,
+.contact .input-container span:after {
+  content: "";
+  position: absolute;
+  width: 10%;
+  opacity: 0;
+  transition: 0.3s;
+  height: 5px;
+  background-color: var(--pink-color);
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.contact .input-container span:before {
+  left: 50%;
+}
+
+.contact .input-container span:after {
+  right: 50%;
+}
+
+.contact .input-container.focus label {
+  top: 0;
+  transform: translateY(-50%);
+  left: 25px;
+  font-size: 0.8rem;
+}
+
+.contact .input-container.focus span:before,
+.contact .input-container.focus span:after {
+  width: 50%;
+  opacity: 1;
+}
+
+.contact-info {
+  padding: 2.3rem 2.2rem;
+  position: relative;
+}
+
+.contact-info .info-title {
+  color: var(--pink-color);
+}
+
+.contact-text {
+  color: #333;
+  margin: 1.5rem 0 2rem 0;
+}
+
+.contact .information {
+  display: flex;
+  color: #555;
+  margin: 0.7rem 0;
+  align-items: center;
+  font-size: 0.95rem;
+}
+
+.contact .information i {
+  margin-right: 0.7rem;
+  font-size: 2.3rem;
+  top: 50%;
+  color: var(--pink-color);
+}
+
+.contact .information p {
+  top: 50%;
+}
+
+.contact .social-media {
+  padding: 2rem 0 0 0;
+}
+
+.contact .social-media p {
+  color: #333;
+}
+
+.contact .social-icons {
+  display: flex;
+  margin-top: 0.5rem;
+  font-size: 1.3rem;
+}
+
+.contact .social-icons a {
+  width: 35px;
+  height: 35px;
+  border-radius: 5px;
+  background: linear-gradient(45deg, var(--light-pink), var(--pink-color));
+  color: #fff;
+  text-align: center;
+  line-height: 35px;
+  margin-right: 0.5rem;
+  transition: 0.3s;
+}
+
+.social-icons a:hover {
+  transform: scale(1.1);
+}
+
+@media (max-width: 850px) {
+  .contact .form {
+    grid-template-columns: 1fr;
+  }
+  .contact-info:before {
+    bottom: initial;
+    top: -75px;
+    right: 65px;
+    transform: scale(0.95);
+  }
+  .contact-form:before {
+    top: -13px;
+    left: initial;
+    right: 70px;
+  }
+  .info-text {
+    margin: 1rem 0 1.5rem 0;
+  }
+  .contact .social-media {
+    padding: 1.5rem 0 0 0;
+  }
+}
+@media (max-width: 480px) {
+  .contact .container {
+    padding: 1.5rem;
+  }
+  .contact-info:before {
+    display: none;
+  }
+  .contact form,
+  .contact-info {
+    padding: 1.7rem 1.6rem;
+  }
+  .contact-text,
+  .information,
+  .contact .social-media p {
+    font-size: 0.8rem;
+  }
+  .info-title {
+    font-size: 1.15rem;
+  }
+  .contact .social-icons a {
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+  }
+  .bx {
+    width: 23px;
+  }
+  .contact .input {
+    padding: 0.45rem 1.2rem;
+  }
+  .contact .btn {
+    padding: 0.45rem 1.2rem;
+  }
+}
 /* Google Fonts Import */
 /* Some Variables  */
 /* This is somethting I didn't previously know that I could do! */
@@ -11884,7 +12240,7 @@ body {
   width: 100%;
   position: relative;
   text-align: center;
-  background-image: url("/images/sprinkles-bg.jpg");
+  /* background-image: url("/images/sprinkles-bg.jpg"); */
 }
 
 h1, .h1 {
@@ -11968,21 +12324,20 @@ img {
   justify-content: space-between;
   background-color: var(--pink-color);
   box-shadow: 0 8px 11px rgb(14 55 54/25%);
-  /* padding: 20px 100px; */
   transition: 0.5s;
 }
 
 .navbar a {
   font-family: "Borel", cursive;
   font-weight: 400px;
-  color: white;
+  color: rgb(255, 255, 255);
   font-size: 1.35rem;
 }
 
 .navbar a:hover {
-  background: white;
+  color: rgb(255, 255, 255);
+  border: 2px solid #fafafa;
   border-radius: 5rem;
-  color: var(--pink-color);
   transition: background 0.7s;
 }
 
@@ -12094,12 +12449,17 @@ img {
   padding-bottom: 30vh;
 }
 
+.specialty h1, .specialty .h1,
+.specialty p {
+  margin-bottom: 30px;
+}
+
 /*********************************** Special Offers *********************************/
 .offers {
   background-color: var(--seafoam-color);
 }
 
-/*********************************************** My Creations ********************************************/
+/******************************* My Creations ********************************************/
 .creations {
   background-color: white;
 }
@@ -12158,10 +12518,6 @@ img {
   display: flex;
 }
 
-.ad-container {
-  /* padding: 50px 0; */
-}
-
 .ad-details {
   padding: 0 20px;
   line-height: 2rem;
@@ -12172,6 +12528,7 @@ img {
   width: 600px;
   border: solid 1px var(--blue-color);
   background-color: rgb(255, 230, 230);
+  margin: 0 20px;
 }
 
 .ad-order button {
@@ -12213,114 +12570,68 @@ footer .social-icons i {
 }
 
 /********************************** Cart Page *********************************/
-.payment-info {
-  background: blue;
-  padding: 10px;
-  border-radius: 6px;
-  color: #fff;
-  font-weight: bold;
+/******************* Menu ************************/
+.menu .row {
+  /* background-color: white; */
 }
 
-.product-details {
-  padding: 10px;
+.menu-header {
+  /* This needs a background of some kind? */
+  padding-top: 200px;
 }
 
-.cart {
-  background: #fff;
+.menu-title {
+  font-family: "Merienda", cursive;
+  font-weight: 800;
+  text-align: left;
+  -webkit-text-stroke: rgb(62, 62, 62);
+  position: relative;
+  max-width: auto;
+  padding: 180px 0 30px 0;
 }
 
-.p-about {
-  font-size: 12px;
+.menu-title:after {
+  content: "";
+  height: 2.5px;
+  background: rgb(79, 79, 79);
+  display: block;
+  top: 50%;
+  right: 0;
 }
 
-.table-shadow {
-  -webkit-box-shadow: 5px 5px 15px -2px rgba(0, 0, 0, 0.42);
-  box-shadow: 5px 5px 15px -2px rgba(0, 0, 0, 0.42);
+.menu .container {
+  max-width: 80vw;
 }
 
-.type {
-  font-weight: 400;
-  font-size: 10px;
+@media (max-width: 1025px) and (min-width: 850px) {
+  .menu .container {
+    max-width: 95vw;
+  }
 }
-
-label.radio {
-  cursor: pointer;
-}
-
-label.radio input {
-  position: absolute;
-  top: 0;
-  left: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-label.radio span {
-  padding: 1px 12px;
-  border: 2px solid #ada9a9;
-  display: inline-block;
-  color: #8f37aa;
-  border-radius: 3px;
-  text-transform: uppercase;
-  font-size: 11px;
-  font-weight: 300;
-}
-
-label.radio input:checked + span {
-  border-color: #fff;
-  background-color: blue;
-  color: #fff;
-}
-
-.credit-inputs {
-  background: rgb(102, 102, 221);
-  color: #fff !important;
-  border-color: rgb(102, 102, 221);
-}
-
-.credit-inputs::placeholder {
-  color: #fff;
-  font-size: 13px;
-}
-
-.credit-card-label {
-  font-size: 9px;
-  font-weight: 300;
-}
-
-.form-control.credit-inputs:focus {
-  background: rgb(102, 102, 221);
-  border: rgb(102, 102, 221);
-}
-
-.line {
-  border-bottom: 1px solid rgb(102, 102, 221);
-}
-
-.information span {
-  font-size: 12px;
-  font-weight: 500;
-}
-
-.information {
-  margin-bottom: 5px;
-}
-
-.items {
-  -webkit-box-shadow: 5px 5px 4px -1px rgba(0, 0, 0, 0.25);
-  box-shadow: 5px 5px 4px -1px rgba(0, 0, 0, 0.08);
-}
-
-.spec {
-  font-size: 11px;
-}
-
 /****************** Flip Card ****************************/
+.menu-card-bottom {
+  /* padding-bottom: 20px; */
+  background-color: #ffffff;
+  padding: 20px 0;
+  margin-bottom: 20px;
+  /* text-align: left; */
+  line-height: 0;
+  font-family: "Merienda", cursive;
+  color: rgb(72, 72, 72);
+  border-radius: 10px;
+}
+
+.menu-card-bottom h3, .menu-card-bottom .h3 {
+  font-size: 1.5rem;
+  font-weight: 800;
+  letter-spacing: 0.2rem;
+}
+
 .flip-box {
   transform-style: preserve-3d;
   perspective: 1000px;
   cursor: pointer;
-  margin: 15px;
+  margin-top: 15px;
 }
 
 .flip-box:hover .flip-box-front {
@@ -12428,7 +12739,7 @@ label.radio input:checked + span {
 }
 
 /* Smaller font at breakpoint 1199px */
-@media (max-width: 1199px) and (min-width: 910px) {
+@media (max-width: 1199px) and (min-width: 576px) {
   .flip-box-header {
     font-size: 20px;
   }
@@ -12445,187 +12756,6 @@ label.radio input:checked + span {
     padding: 10px 15px;
   }
 }
-/******************* Menu ************************/
-.menu .row {
-  background-color: white;
-}
-
-.menu-header {
-  /* This needs a background of some kind? */
-  padding-top: 200px;
-}
-
-.menu-title {
-  font-family: "Merienda", cursive;
-  font-weight: 800;
-  text-align: left;
-  -webkit-text-stroke: rgb(62, 62, 62);
-  position: relative;
-  max-width: auto;
-  padding: 180px 0 30px 0;
-}
-
-.menu-title:after {
-  content: "";
-  height: 2.5px;
-  background: rgb(79, 79, 79);
-  display: block;
-  top: 50%;
-  right: 0;
-}
-
-/**************** Custom Order Page ***************/
-.order-header {
-  padding-top: 100px;
-}
-
-.form-holder {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  min-height: 50vh;
-}
-
-.form-holder .form-content {
-  width: 70vw;
-  position: relative;
-  text-align: center;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-align-items: center;
-  align-items: center;
-  padding: 60px;
-}
-
-.form-content .form-items {
-  background-color: var(--blue-color);
-  border: 3px solid #fff;
-  padding: 40px;
-  display: inline-block;
-  width: 100%;
-  min-width: 540px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-  text-align: left;
-  -webkit-transition: all 0.4s ease;
-  transition: all 0.4s ease;
-}
-
-.form-content h3, .form-content .h3 {
-  color: #fff;
-  text-align: left;
-  font-size: 28px;
-  font-weight: 600;
-  margin-bottom: 5px;
-}
-
-.form-content h3.form-title, .form-content .form-title.h3 {
-  margin-bottom: 30px;
-}
-
-.form-content p {
-  color: #fff;
-  text-align: left;
-  font-size: 17px;
-  font-weight: 300;
-  line-height: 20px;
-  margin-bottom: 30px;
-}
-
-.form-content label,
-.was-validated .form-check-input:invalid ~ .form-check-label,
-.was-validated .form-check-input:valid ~ .form-check-label {
-  color: #fff;
-}
-
-.form-content input[type=text],
-.form-content input[type=password],
-.form-content input[type=email],
-.form-content input[type=file],
-.form-content textarea,
-.form-content select {
-  width: 100%;
-  padding: 9px 20px;
-  text-align: left;
-  border: 0;
-  outline: 0;
-  border-radius: 6px;
-  background-color: #fff;
-  font-size: 15px;
-  font-weight: 300;
-  color: #8d8d8d;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  margin-top: 16px;
-}
-
-.form-content input[type=file] {
-  margin-top: 0;
-}
-
-.btn-primary {
-  background-color: #6c757d;
-  outline: none;
-  border: 0px;
-  box-shadow: none;
-}
-
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary:active {
-  background-color: #495056;
-  outline: none !important;
-  border: none !important;
-  box-shadow: none;
-}
-
-.form-content textarea {
-  position: static !important;
-  width: 100%;
-  padding: 8px 20px;
-  border-radius: 6px;
-  text-align: left;
-  background-color: #fff;
-  border: 0;
-  font-size: 15px;
-  font-weight: 300;
-  color: #8d8d8d;
-  outline: none;
-  resize: none;
-  height: 120px;
-  -webkit-transition: none;
-  transition: none;
-  margin-bottom: 14px;
-}
-
-.form-content textarea:hover,
-.form-content textarea:focus {
-  border: 0;
-  background-color: #ebeff8;
-  color: #8d8d8d;
-}
-
-.mv-up {
-  margin-top: -9px !important;
-  margin-bottom: 8px !important;
-}
-
-.invalid-feedback {
-  color: #ff606e;
-}
-
-.valid-feedback {
-  color: #2acc80;
-}
-
 /**************************** Product Order Page ****************************/
 .product-order {
   background-color: white;
