--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,14 +7,19 @@ $grid-breakpoints: (
   xs: 0,
   sm: 576px,
   md: 668px,
-  lg: 910px,
+  lg: 850px,
   xl: 1200px,
   xxl: 1400px
 );
 
 
 
+
 @import "../node_modules/bootstrap/scss/bootstrap";
+
+@import "border-styles";
+
+@import "custom-order";
 
 @import "styles";
 
