--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,16 @@
 
     <%-include('partials/navbar')-%>
 
+    <section class="wavy page-banner">
+      <div class="page-container container">
+          <div class="row mx-auto">
+              <div class="col my-auto">
+                  <h1>About Me!</h1>
+              </div>
+          </div>
+      </div>
+  </section>
+
     <div class="body-position">
       <h1>About me!</h1>
       <p>
