--- a/views/custom-order.ejs
+++ b/views/custom-order.ejs
@@ -1,108 +1,119 @@
 
     <%- include('partials/navbar');-%>
 
-<div class="body-position">
-  <h1 class="order-header">Custom Order</h1>
+    <section class="wavy page-banner">
+      <div class="page-container container">
+          <div class="row mx-auto">
+              <div class="col my-auto">
+                  <h1>Contacts</h1>
+                  <h1>Custom Orders</h1>
+              </div>
+          </div>
+      </div>
+  </section>
 
-  <div class="form-body">
-    <div class="row">
-        <div class="form-holder">
-            <div class="form-content">
-                <div class="form-items">
-                    <h3>Send Me a Message!</h3>
-                    <p>If you're looking for something unique,  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    </p>
-                    <form class="requires-validation" novalidate>
+<section  id="contact" class="contact">
+  <div class="container">
+    <div class="form">
+      <div class="contact-info">
+        <h3 class="info-title">Let's get in touch</h3>
+        <p class="contact-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+          dolorum adipisci recusandae praesentium dicta!
+        </p>
 
-                        <div class="col-md-12">
-                           <input class="form-control" type="text" name="name" placeholder="Full Name" required>
-                           <div class="valid-feedback">Username field is valid!</div>
-                           <div class="invalid-feedback">Username field cannot be blank!</div>
-                        </div>
-
-                        <div class="col-md-12">
-                            <input class="form-control" type="email" name="email" placeholder="E-mail Address" required>
-                             <div class="valid-feedback">Email field is valid!</div>
-                             <div class="invalid-feedback">Email field cannot be blank!</div>
-                        </div>
-                  
-
-                       <div class="col-md-12">
-                        <div class="mb-3">
-                          <textarea class="form-control" id="customerMessage" rows="3" placeholder="Write your message here!"></textarea>
-                        </div>
-                       </div>
-
-                       <div class="col-md-12">
-                        <div class="mb-3">
-                          <label for="formFileMultiple" class="form-label">Reference Images:</label>
-                          <input class="form-control" type="file" id="formFileMultiple" multiple>
-                        </div>
-                      </div>
-
-                        <div class="form-button mt-3">
-                            <button id="submit" type="submit" class="btn btn-primary">Send</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
+        <div class="info">
+          <div class="information">
+            <i class="bx bx-envelope"></i>
+            <p class="my-auto">lorem@ipsum.com</p>
+          </div>
+          <div class="information">
+            <i class="bx bx-envelope"></i>
+            <p class="my-auto">lorem@ipsum.com</p>
+          </div>
+          <div class="information">
+            <i class="bx bx-phone-call"></i>
+            <p class="my-auto">123-456-789</p>
+          </div>
         </div>
+
+        <div class="social-media">
+          <p>Connect with us :</p>
+          <div class="social-icons">
+            <a href="#">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      
+      <div class="contact-form">
+        <form action="index.html" autocomplete="off">
+          <h3 class="info-title">Contact us</h3>
+          <div class="input-container">
+            <input type="text" name="name" class="input" />
+            <label for="">Name</label>
+            <span>Name</span>
+          </div>
+          <div class="input-container">
+            <input type="email" name="email" class="input" />
+            <label for="">Email</label>
+            <span>Email</span>
+          </div>
+          <div class="input-container">
+            <input type="tel" name="phone" class="input" />
+            <label for="">Phone</label>
+            <span>Phone</span>
+          </div>
+          <div class="input-container textarea">
+            <textarea name="message" class="input"></textarea>
+            <label for="">Message</label>
+            <span>Message</span>
+          </div>
+          <div class="input-container">
+            <input class="input" type="file" id="formFileMultiple" multiple>
+            <label for="formFileMultiple" class="form-label">Reference Images:</label>
+            <span>Images</span>
+          </div>
+          <input type="submit" value="Send" class="btn" />
+        </form>
+      </div>
     </div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <div class="custom-order container">
-  <div class="col-sm-6 order">
-    <form>
-      <div class="form-group">
-        <input
-          type="text"
-          class="form-control"
-          id="customer-name"
-          placeholder="Your Name"
-        />
-      </div>
-      <div class="form-group">
-        <input
-          type="email"
-          class="form-control"
-          id="customer-email"
-          placeholder="Your Email"
-        />
-      </div>
-      <div class="form-group">
-        <textarea
-          class="form-control"
-          id="customer-message"
-          rows="3"
-          placeholder="Type Message"
-        ></textarea>
-      </div>
-      <button type="submit" class="btn btn-light">Send</button>
-    </form>
   </div>
-  </form>
-</div> -->
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
