--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -20,82 +20,88 @@
 
     <!-- CSS -->
     <link href="css/main.css" rel="stylesheet" />
+    <!-- icons -->
+    <script
+      src="https://kit.fontawesome.com/64d58efce2.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- NavBar -->
-    <nav class="navbar fixed-top navbar-expand-lg">
-      <div class="container-fluid">
-        <a class="navbar-brand mx-auto" href="/">
-          <i class="bx bx-cake"></i>Maybe Cakes</a
-        >
-        <!-- make it a logo later -->
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon">
-            <i class="bx bx-menu"></i>
-          </span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Shop
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="/menu">Menu</a></li>
-                <li>
-                  <a class="dropdown-item" href="/#my-creations"
-                    >My Creations</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#special-offers"
-                    >Special Offers</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="/custom-order">Custom Order</a>
-                </li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="/cart"
-                    >Cart <i class="bx bx-cart"></i
-                  ></a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#my-creations">Creations</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#recipes">Recipes</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/contact">Contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/about">About</a>
-            </li>
-          </ul>
+    <div class="container">
+      <nav class="navbar fixed-top navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand mx-auto" href="/">
+            <i class="bx bx-cake"></i>Maybe Cakes</a
+          >
+          <!-- make it a logo later -->
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon">
+              <i class="bx bx-menu"></i>
+            </span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="navbarDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Shop
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="/menu">Menu</a></li>
+                  <li>
+                    <a class="dropdown-item" href="/#my-creations"
+                      >My Creations</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#special-offers"
+                      >Special Offers</a
+                    >
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="/custom-order"
+                      >Custom Order</a
+                    >
+                  </li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="/cart"
+                      >Cart <i class="bx bx-cart"></i
+                    ></a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#my-creations">Creations</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/custom-order">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/about">About</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
   </body>
 </html>
